--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,18 +1,26 @@
 {
-    "home": "Accueil",
-    "user": "Utilisateur",
-    "post": "Poste",
-    "profile": "Profil",
-    "settings": "Paramètre",
-    "save": "Sauvegarder",
-    "edit": "Modifier",
-    "cancel": "Annuler",
-    "delete":"Supprimer",
-    "pdf":"PDF",
-    "excel":"Excel",
-    "import":"Importer",
-    "export":"Exporter",
-    "word":"Word",
-    "upload":"Télécharger",
-    "download":"Télécharger"
-  }
+  "home": "Accueil",
+  "users": "Utilisateur",
+  "post": "Publication",
+  "profile": "Profil",
+  "settings": "Paramètres",
+  "save": "Enregistrer",
+  "edit": "Modifier",
+  "cancel": "Annuler",
+  "delete": "Supprimer",
+  "pdf": "PDF",
+  "excel": "Excel",
+  "import": "Importer",
+  "export": "Exporter",
+  "word": "Word",
+  "upload": "Télécharger",
+  "download": "Télécharger",
+  "add_user": "Ajouter un utilisateur",
+  "notification": "Notification",
+  "english": "Anglais",
+  "hindi": "Hindi",
+  "arabic": "Arabe",
+  "chinese": "Chinois",
+  "french": "Français",
+  "vietnamese": "Vietnamien"
+}
