--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,6 @@
     "arabic":"Arabic",
     "chinese":"Chinese",
     "french":"French",
-    "vietnamese":"Vietnamese"
+    "vietnamese":"Vietnamese",
+    "tictactoe":"Tic Tac Toe"
   }
